// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - features - LN - common - iaSummary snapshots matches snapshot when closed (isOpen=false) 1`] = `
<DocumentFragment>
  <div
    data-tw="true"
    style="display: contents;"
  />
</DocumentFragment>
`;

exports[`Components - features - LN - common - iaSummary snapshots matches snapshot when open with default props 1`] = `
<DocumentFragment>
  <div
    data-tw="true"
    style="display: contents;"
  >
    <section
      aria-label="Resumen de lectura con IA"
      class="p-16 pb-24 flex flex-col rounded-8 shadow-[0_0_10px_4px_rgba(0,0,0,0.05)]"
    >
      <header
        class="flex w-full mb-8"
      >
        <div
          class="flex items-center gap-8"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            class="mb-6"
            name="sparkling-filled"
            size="16"
          />
          <h2
            class="text-18 font-primary font-w-bold"
          >
            Resumen
          </h2>
        </div>
        <button
          aria-label="Cerrar resumen"
          class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 h-32 px-12 text-label-sm rounded-button font-bold uppercase aspect-1/1 text-secondary-default hover:bg-secondary-lighten data-[disabled="true"]:text-secondary-lighten ml-auto"
          data-disabled="false"
          style="--ds-icon-size: 16px;"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            name="close"
          />
        </button>
      </header>
      <hr
        aria-orientation="horizontal"
        class="ds-divider border-0 bg-muted w-full h-1 mb-16"
        role="separator"
      />
      <ul
        class="gap-y-16 mb-16"
        direction="vertical"
        size="16"
      >
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            First summary point
          </span>
        </li>
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            Second summary point
          </span>
        </li>
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            Third summary point
          </span>
        </li>
      </ul>
      <footer>
        <span
          class="text-label-sm text-base-light"
        >
          Resumen realizado con IA
        </span>
      </footer>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Components - features - LN - common - iaSummary snapshots matches snapshot with HTML content in summary items 1`] = `
<DocumentFragment>
  <div
    data-tw="true"
    style="display: contents;"
  >
    <section
      aria-label="Resumen de lectura con IA"
      class="p-16 pb-24 flex flex-col rounded-8 shadow-[0_0_10px_4px_rgba(0,0,0,0.05)]"
    >
      <header
        class="flex w-full mb-8"
      >
        <div
          class="flex items-center gap-8"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            class="mb-6"
            name="sparkling-filled"
            size="16"
          />
          <h2
            class="text-18 font-primary font-w-bold"
          >
            Resumen
          </h2>
        </div>
        <button
          aria-label="Cerrar resumen"
          class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 h-32 px-12 text-label-sm rounded-button font-bold uppercase aspect-1/1 text-secondary-default hover:bg-secondary-lighten data-[disabled="true"]:text-secondary-lighten ml-auto"
          data-disabled="false"
          style="--ds-icon-size: 16px;"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            name="close"
          />
        </button>
      </header>
      <hr
        aria-orientation="horizontal"
        class="ds-divider border-0 bg-muted w-full h-1 mb-16"
        role="separator"
      />
      <ul
        class="gap-y-16 mb-16"
        direction="vertical"
        size="16"
      >
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            <strong>
              Bold point
            </strong>
          </span>
        </li>
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            Plain point
          </span>
        </li>
      </ul>
      <footer>
        <span
          class="text-label-sm text-base-light"
        >
          Resumen realizado con IA
        </span>
      </footer>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Components - features - LN - common - iaSummary snapshots matches snapshot with a single summary item 1`] = `
<DocumentFragment>
  <div
    data-tw="true"
    style="display: contents;"
  >
    <section
      aria-label="Resumen de lectura con IA"
      class="p-16 pb-24 flex flex-col rounded-8 shadow-[0_0_10px_4px_rgba(0,0,0,0.05)]"
    >
      <header
        class="flex w-full mb-8"
      >
        <div
          class="flex items-center gap-8"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            class="mb-6"
            name="sparkling-filled"
            size="16"
          />
          <h2
            class="text-18 font-primary font-w-bold"
          >
            Resumen
          </h2>
        </div>
        <button
          aria-label="Cerrar resumen"
          class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 h-32 px-12 text-label-sm rounded-button font-bold uppercase aspect-1/1 text-secondary-default hover:bg-secondary-lighten data-[disabled="true"]:text-secondary-lighten ml-auto"
          data-disabled="false"
          style="--ds-icon-size: 16px;"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            name="close"
          />
        </button>
      </header>
      <hr
        aria-orientation="horizontal"
        class="ds-divider border-0 bg-muted w-full h-1 mb-16"
        role="separator"
      />
      <ul
        class="gap-y-16 mb-16"
        direction="vertical"
        size="16"
      >
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            Single summary point
          </span>
        </li>
      </ul>
      <footer>
        <span
          class="text-label-sm text-base-light"
        >
          Resumen realizado con IA
        </span>
      </footer>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Components - features - LN - common - iaSummary snapshots matches snapshot with custom className 1`] = `
<DocumentFragment>
  <div
    data-tw="true"
    style="display: contents;"
  >
    <section
      aria-label="Resumen de lectura con IA"
      class="p-16 pb-24 flex flex-col rounded-8 shadow-[0_0_10px_4px_rgba(0,0,0,0.05)] rounded-lg mt-8"
    >
      <header
        class="flex w-full mb-8"
      >
        <div
          class="flex items-center gap-8"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            class="mb-6"
            name="sparkling-filled"
            size="16"
          />
          <h2
            class="text-18 font-primary font-w-bold"
          >
            Resumen
          </h2>
        </div>
        <button
          aria-label="Cerrar resumen"
          class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 h-32 px-12 text-label-sm rounded-button font-bold uppercase aspect-1/1 text-secondary-default hover:bg-secondary-lighten data-[disabled="true"]:text-secondary-lighten ml-auto"
          data-disabled="false"
          style="--ds-icon-size: 16px;"
        >
          <mock-ds-common-icon
            aria-hidden="true"
            name="close"
          />
        </button>
      </header>
      <hr
        aria-orientation="horizontal"
        class="ds-divider border-0 bg-muted w-full h-1 mb-16"
        role="separator"
      />
      <ul
        class="gap-y-16 mb-16"
        direction="vertical"
        size="16"
      >
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            First summary point
          </span>
        </li>
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            Second summary point
          </span>
        </li>
        <li>
          <mock-ds-common-icon
            aria-hidden="true"
            name="bullet-filled"
          />
          <span
            class="text-body-lg"
          >
            Third summary point
          </span>
        </li>
      </ul>
      <footer>
        <span
          class="text-label-sm text-base-light"
        >
          Resumen realizado con IA
        </span>
      </footer>
    </section>
  </div>
</DocumentFragment>
`;
